Update reddit links

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                         <a href="https://www.reddit.com/r/vrgamedeals/top/" target="_blank">Top</a>
                         |
                         <a
-                            href="https://www.reddit.com/r/vrgamedeals/search?q=-flair%3AExpired%21&restrict_sr=on&include_over_18=on&sort=new&t=all"
+                            href="https://www.reddit.com/r/vrgamedeals/search?q=-flair%3AExpired%21&restrict_sr=on&sort=new&t=all"
                             target="_blank"
                             >Not Expired</a
                         >
@@ -72,19 +72,19 @@
 
                         <span><b>Other Subreddits</b>: </span>
                         <a
-                            href="https://www.reddit.com/r/OculusStore/search/?q=%5BSale%5D&sort=new&restrict_sr=on&t=all"
+                            href="https://www.reddit.com/r/OculusStore/search/?q=%5BSale%5D&restrict_sr=on&sort=new&t=all"
                             target="_blank"
                             >r/OculusStore - New Deals</a
                         >
                         |
                         <a
-                            href="https://www.reddit.com/r/OculusQuestStore/search/?q=%5BSale%5D&sort=new&restrict_sr=on&t=all"
+                            href="https://www.reddit.com/r/OculusQuestStore/search/?q=%5BSale%5D&restrict_sr=on&sort=new&t=all"
                             target="_blank"
                             >r/OculusQuestStore - New Deals</a
                         >
                         |
                         <a
-                            href="https://www.reddit.com/r/buildapcsales/search/?q=VR&sort=new&restrict_sr=on&t=all"
+                            href="https://www.reddit.com/r/buildapcsales/search/?q=VR&restrict_sr=on&sort=new&t=all"
                             target="_blank"
                             >r/buildapcsales - New VR Deals</a
                         >
