--- a/public/index.html
+++ b/public/index.html
@@ -83,13 +83,23 @@
                             <a
                                 href="https://store.steampowered.com/search/?vrsupport=402&filter=weeklongdeals"
                                 target="_blank"
-                                >Search: Weeklong VR Deals</a
+                                >Weeklong VR Deals</a
+                            >
+                            (<a
+                                href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&vrsupport=401&supportedlang=english&filter=weeklongdeals&ndl=1"
+                                target="_blank"
+                                >VR Only</a
                             >
                             |
                             <a
+                                href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&vrsupport=402&unvrsupport=401&supportedlang=english&filter=weeklongdeals&ndl=1"
+                                target="_blank"
+                                >VR Supported</a
+                            >) |
+                            <a
                                 href="https://store.steampowered.com/search/?vrsupport=402&specials=1"
                                 target="_blank"
-                                >Search: All VR Deals</a
+                                >All VR Deals</a
                             >
                         </p>
                         <label for="steam-search-url-input" class="mr-3"
@@ -164,7 +174,17 @@
                             target="_blank"
                             >Weeklong VR Deals</a
                         >
+                        (<a
+                            href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&vrsupport=401&supportedlang=english&filter=weeklongdeals&ndl=1"
+                            target="_blank"
+                            >VR Only</a
+                        >
                         |
+                        <a
+                            href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&vrsupport=402&unvrsupport=401&supportedlang=english&filter=weeklongdeals&ndl=1"
+                            target="_blank"
+                            >VR Supported</a
+                        >) |
                         <a
                             href="https://store.steampowered.com/search/?vrsupport=402&specials=1"
                             target="_blank"
