Update links to only show "games, software, dlc"

--- a/public/index.html
+++ b/public/index.html
@@ -86,13 +86,13 @@
                                 >Weeklong VR Deals</a
                             >
                             (<a
-                                href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&vrsupport=401&supportedlang=english&filter=weeklongdeals&ndl=1"
+                                href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&category1=994%2C21%2C998&vrsupport=401&filter=weeklongdeals&ndl=1"
                                 target="_blank"
                                 >VR Only</a
                             >
                             |
                             <a
-                                href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&vrsupport=402&unvrsupport=401&supportedlang=english&filter=weeklongdeals&ndl=1"
+                                href="https://store.steampowered.com/search/?untags=12095%2C6650%2C9130&category1=998%2C994%2C21&vrsupport=402&unvrsupport=401&supportedlang=english&filter=weeklongdeals&ndl=1"
                                 target="_blank"
                                 >VR Supported</a
                             >) |
